Fixed the error link urls in README files

--- a/sdk/php/README
+++ b/sdk/php/README
@@ -11,8 +11,10 @@ $Id$
     - util/IniWizzaard.php   命令行运行，用于帮助您编写 xunsearch 项目配置文件
     - util/Quest.php         命令行运行，搜索测试工具
     - util/Indexer.php       命令行运行，索引管理工具
+    - util/SearchSkel.php    命令行运行，根据配置文件生成搜索骨架代码
 
 在开始编写您的代码前强烈建议执行 util/RequireCheck.php 以检查环境。
 
 具体各项文档内容请参阅子目录： doc/ 
-强烈推荐在线阅读我们的文档：http://www.xunsearch.com/docs/php/
+强烈推荐在线阅读我们的文档：<http://www.xunsearch.com/doc/>
+
